Fixed styles on mobile

--- a/styles/xmasScan.module.css
+++ b/styles/xmasScan.module.css
@@ -1,4 +1,16 @@
+.mainWrapper {
+  overflow-wrap: break-word;
+}
+
 .mainWrapper > * {
-    margin-top: 10px;
-    margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0 10px;
+}
+
+.codeStyles {
+  overflow-wrap: break-word;
+  font-family: 'Courier New', monospace;
+  display: block;
+  width: 100%;
 }
